update test. not work.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 EnteringOrbit.xcodeproj/xcuserdata/highvision.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 
 EnteringOrbitTests/TestParams.h
+
+EnteringOrbit.xcodeproj/project.xcworkspace/xcuserdata/highvision.xcuserdatad/UserInterfaceState.xcuserstate
+
+EnteringOrbit.xcodeproj/project.xcworkspace/xcuserdata/t.inoue.xcuserdatad/UserInterfaceState.xcuserstate
+
+EnteringOrbit.xcodeproj/xcuserdata/t.inoue.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+EnteringOrbit.xcodeproj/xcuserdata/t.inoue.xcuserdatad/xcschemes/EnteringOrbit.xcscheme
+
+EnteringOrbit.xcodeproj/xcuserdata/t.inoue.xcuserdatad/xcschemes/xcschememanagement.plist
